<resources>
    <string name="hint_student">Please enter student\'s name.</string>
    <string name="hint_information">Please enter student\'s information.</string>
    <string name="insert">ADD STUDENT</string>
    <string name="search">SEARCH</string>
    <string name="hint_keyword">Please enter keyword to search.</string>
    <string name="information">Information</string>
    <string name="hello">Hello World</string>
    <string name="action_settings">menu</string>
    <string name="title_activity_result">Search Result</string>
    <string name="app_name">Student Management</string>
</resources>
